--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 	font-size: 1em;
 	font-weight: normal;
 	padding: 5px;
+	border-radius: 2px;
 }
 
 .chat-header {
@@ -57,6 +58,7 @@
 	height: 280px;
 	background-color: #fff;
 	padding: 10px;
+	border-radius: 2px;
 }
 
 .chat-input {
